Fix slimbox z-index

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
@@ -417,6 +417,14 @@ div.btn-group > .has-switch {
   float: right;
 }
 
+#lbImage {
+  z-index: 1000;
+}
+
+#lbOverlay {
+  z-index: 900;
+}
+
 /* Collapsable sidebar **********************************************************************************************/
 
 .sidebarized {
